<resources>
    <string name="translators">TrianguloY</string>
    <string name="locale">English</string>
    <string name="txt_info">This app acts as an intermediary when opening clicked URL links. A dialog with some info about the link is shown when choosing this app to open it. Press the module button below to check and configure all available modules.</string>
    <string name="txt_sample">Press the link below to test it:</string>
    <string name="a_modules">Modules</string>
    <string name="a_settings">Settings</string>
    <string name="a_about">About</string>
    <string name="txt_about">"App created by %1$s.

Contributions: %2$s.
Translations: %3$s."</string>
    <string name="link_blog">"%s's blog"</string>
    <string name="link_changelog">Changelog</string>
    <string name="link_source">Source code</string>
    <string name="link_privacy">Privacy policy</string>
    <string name="txt_conf">Here are all the available modules, where you can check their description and settings. You can also reorder, toggle the title visibility and enable/disable them.</string>
    <string name="toast_cantEnable">"Can't enable the module: %s"</string>
    <string name="menu_resetOrder">Reset order</string>
    <string name="menu_toggleDecorations">Toggle all titles</string>
    <string name="desc_up">Move up</string>
    <string name="desc_down">Move down</string>
    <string name="desc_decorations">Show/hide title</string>
    <string name="desc_enable">Enable/disable module</string>
    <string name="txt_openLinks">Open links on this app: Over the years Android has changed the way to configure it, and differs between versions. Find below all available settings for your device, if links are not being opened on this app try them all.</string>
    <string name="btn_setBrowser">Set as default browser</string>
    <string name="toast_defaultSet">The app is now the default web browser</string>
    <string name="btn_configureBrowser">Default web browser</string>
    <string name="btn_linksSettings">Open supported links</string>
    <string name="btn_androidSettings">Android app settings</string>
    <string name="txt_theme">Theme:</string>
    <string name="spin_darkTheme">Dark</string>
    <string name="spin_lightTheme">Light</string>
    <string name="spin_amoledTheme">AMOLED</string>
    <string name="txt_width">Dialog width (0 for automatic):\nWarning! Small values may hide screen elements.</string>
    <string name="spin_fullWidth">Full</string>
    <string name="spin_dynamicWidth">Dynamic</string>
    <string name="txt_locale">Locale:</string>
    <string name="txt_interface_edges">Element edges:</string>
    <string name="spin_edges_rounded">Rounded</string>
    <string name="spin_edges_sharp">Sharp</string>
    <string name="spin_edges_default">Default</string>
    <string name="txt_rounded_amount">Rounded amount:</string>
    <string name="txt_show_element_borders">Show element borders</string>
    <string name="txt_show_overall_interface_border">Overall interface border</string>
    <string name="txt_overall_interface_edges">Overall interface edge:</string>
    <string name="spin_overall_edges_default">Default</string>
    <string name="spin_overall_edges_sharp">Sharp</string>
    <string name="spin_overall_edges_rounded">Round</string>
    <string name="txt_overall_border_color">Overall border colour (hex, current theme):</string>
    <string name="txt_overall_border_width">Overall border width:</string>
    <string name="txt_overall_rounded_amount">Overall rounded amount:</string>
    <string name="txt_element_color">Element colour (hex, current theme):</string>
    <string name="txt_border_color">Element border colour (hex, current theme):</string>
    <string name="txt_animation">Enable animations</string>
    <string name="txt_processText">Sync url with editable text (when the app is opened by long tapping text on an input textbox)</string>
    <string name="btn_tutorialSettings">Repeat tutorial</string>
    <string name="btn_backupRestore">Backup / Restore</string>
    <string name="bck_mn_advanced">Show advanced options</string>
    <string name="bck_backup">Backup</string>
    <string name="bck_restore">Restore</string>
    <string name="bck_delete">Delete</string>
    <string name="bck_description">"Choose which elements to backup/restore.
When restoring, if the backup was created without it, existing ones will be kept."</string>
    <string name="bck_data">Data: Standard application data. Things like enabled modules, json configurations, etc. Will not include secrets nor cache.</string>
    <string name="bck_data_prefs">Preferences: Data saved as preferences.</string>
    <string name="bck_data_files">Files: Data saved as files.</string>
    <string name="bck_secrets">"Secrets: Data considered 'secret', like the VirusTotal api key or the log."</string>
    <string name="bck_cache">Cache: Data that can be easily downloaded/generated, like the hosts database. Enabling this option may increase the backup size notably.</string>
    <string name="bck_restoreDelete">Delete elements before restoring. Note that preferences and some files with default values may not exist, so disabling this option will merge the existing elements with the backup ones in unexpected ways. Disable if you know what you are doing.</string>
    <string name="bck_ignoreNewer">Allow backups created from newer app versions.</string>
    <string name="bck_newer">Canceled. The backup was created with a newer app version.</string>
    <string name="bck_chooseFile">Choose backup file</string>
    <string name="bck_backupOk">Backup created</string>
    <string name="bck_backupError">"Unable to create backup, try to choose a different location for the file."</string>
    <string name="bck_restoreTitle">Restore backup</string>
    <string name="bck_restoreMessage">"WARNING! This will replace the selected elements from the backup.
Do you really want to continue?"</string>
    <string name="bck_restoreConfirm">Replace elements</string>
    <string name="bck_restoreOk">Backup restored</string>
    <string name="bck_restoreError">Unable to restore the backup. Is it a valid file?</string>
    <string name="bck_deleteTitle">Delete elements</string>
    <string name="bck_deleteMessage">"WARNING! This will delete all the selected elements.
Do you really want to continue?"</string>
    <string name="bck_deleteConfirm">Delete elements</string>
    <string name="bck_deleteOk">Elements deleted</string>
    <string name="bck_deleteError">Unable to delete elements</string>
    <string name="tutorial">Tutorial</string>
    <string name="txt_tutorial1">"Thanks for downloading the app!

This is the tutorial, if you want to skip it you can do so with the button below. You can always come back to this tutorial from the settings menu."</string>
    <string name="txt_tutorial2">The app acts as an intermediary when opening or sharing url links. Once an url is sent to the app you can interact with it via the modules. After that you can open the link (in the app you want), share it or copy it to the clipboard.</string>
    <string name="txt_tutorial3">Set the app as the default web browser to intercept URLs when opening them.
\n(Not needed if URLs are redirected using the “Share” functionality.)</string>
    <string name="txt_tutorial4">Modules is how the app interacts with the URLs.
\nEach of the modules has a specific function. Usually to present info about the URL, or allowing it to be modified.
\nRead about them and set them up as needed.
\n
\nImportant: All the actions are manual by default. The app won\'t modify anything nor connect to the Internet unless you specifically allow it, but some actions can be auto-applied if desired.
\n
\nOpen the list of modules from the main screen, or by tapping the button below.</string>
    <string name="txt_tutorial5">"That's all. Here are some tips that can be useful:

When an app doesn't give you a way to open or share a url, but it gives you a way to do the other you can solve the issue using this app. You can also copy the url to the clipboard by long pressing the share button.

There are some urls which its only purpose is redirecting you to another url. If the final url can be opened in an app, then you can avoid opening it in a browser.

Hope you find the app useful! And don't hesitate to suggest features, report bugs or even propose changes. Find all relevant links on the about screen."</string>
    <string name="btn_tutorialSkip">Skip tutorial</string>
    <string name="btn_tutorialEnd">Finish tutorial</string>
    <string name="toast_noApp">Can not open the app</string>
    <string name="toast_noBrowser">Can not open the web browser</string>
    <string name="invalid">Invalid</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="none">None</string>
    <string name="auto">Automatic</string>
    <string name="defaultOn">Enabled by default</string>
    <string name="defaultOff">Disabled by default</string>
    <string name="alwaysOn">Always on</string>
    <string name="alwaysOff">Always off</string>
    <string name="hidden">Hidden</string>
    <string name="share">Share</string>
    <string name="canceled">Canceled</string>
    <string name="deviceDefault">Device default</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="dismiss">Dismiss</string>
    <string name="noLinks">No links detected</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="big">Big</string>
    <string name="format">Format</string>
    <string name="discard">Discard</string>
    <string name="json_editor">Json editor</string>
    <string name="json_info">Show info</string>
    <string name="json_ignore">The content is not valid Json. Do you want to discard it and close the editor?</string>
    <string name="json_discard_close">Discard and close</string>
    <string name="json_save">There are unsaved changes, do you want to save or discard them?</string>
    <string name="json_save_error">Unable to save: %s</string>
    <string name="json_format_error">The content is not valid Json, can\'t be parsed.</string>
    <string name="json_discard">Warning, this will replace the editor content with the saved json. All changes made will be lost. Do you want to continue?</string>
    <string name="json_reset">Warning, this will replace the editor content with the built-in json. All editor changes made will be lost, but saved content will not be modified unless manually saved. Do you want to continue?</string>
    <string name="json_bigger">Increase font size</string>
    <string name="json_smaller">Decrease font size</string>
    <string name="shortcut_checkClipboard">Check URLs from the clipboard</string>
    <string name="a_automations">Automations</string>
    <string name="auto_desc">With automations you can perform module actions based on triggers. You can configure the automations here, or disable all them together using the toggle below.</string>
    <string name="auto_userContent">List of other useful user-created automations: %s</string>
    <string name="auto_enabled">Enable automations feature</string>
    <string name="auto_error_toast">Show toast if automation fails</string>
    <string name="auto_notFound">"No automation with key '%s' is available. Make sure it is valid and the required module is active."</string>
    <string name="btn_exportImportCustomisation">Export / Import Customisation</string>
</resources>