<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/smallPadding"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openTutorial"
            android:text="@string/btn_tutorialSettings" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_openLinks" />

        <include layout="@layout/fragment_browser_buttons" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_theme" />

            <Spinner
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_width" />

            <TextView
                android:id="@+id/width_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/width_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:max="100"
            android:padding="@dimen/smallPadding" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_locale" />

            <Spinner
                android:id="@+id/locale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_interface_edges" />

            <Spinner
                android:id="@+id/edges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/smallPadding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_overall_interface_edges" />

            <Spinner
                android:id="@+id/overall_edges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overall_rounded_amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_overall_rounded_amount" />

            <TextView
                android:id="@+id/overall_rounded_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/overall_rounded_amount_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="64"
            android:min="0"
            android:padding="@dimen/smallPadding" />

        <LinearLayout
            android:id="@+id/overall_border_color_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_overall_border_color" />

            <EditText
                android:id="@+id/overall_border_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overall_border_width_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_overall_border_width" />

            <TextView
                android:id="@+id/overall_border_width_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/overall_border_width_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="1"
            android:padding="@dimen/smallPadding" />

        <LinearLayout
            android:id="@+id/rounded_amount_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_rounded_amount" />

            <TextView
                android:id="@+id/rounded_amount_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/rounded_amount_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="50"
            android:padding="@dimen/smallPadding" />

        <Switch
            android:id="@+id/show_element_borders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smallPadding"
            android:text="@string/txt_show_element_borders" />

        <Switch
            android:id="@+id/show_overall_interface_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smallPadding"
            android:text="@string/txt_show_overall_interface_border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_element_color" />

            <EditText
                android:id="@+id/element_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_border_color" />

            <EditText
                android:id="@+id/border_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:inputType="text" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />

        </FrameLayout>


        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openImportExportCustomization"
            android:text="@string/btn_exportImportCustomisation" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding">

            <include layout="@layout/separator" />

        </FrameLayout>

        <Switch
            android:id="@+id/animations"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smallPadding"
            android:text="@string/txt_animation" />

        <Switch
            android:id="@+id/processText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/smallPadding"
            android:text="@string/txt_processText" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/padding">

            <include layout="@layout/separator" />
        </FrameLayout>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openBackup"
            android:text="@string/btn_backupRestore" />

    </LinearLayout>

</ScrollView>